Fix h3 alignment on mobile menu items

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1858,4 +1858,10 @@ body {
     .menu-item img {
         height: 180px;
     }
+
+    .menu-content h3 {
+        display: block;
+        text-align: center;
+        margin-bottom: 5px;
+    }
 }
